Minor imporvements to the build in dhcp broswer - * added delete reservation option * sorted subnet list * add counters to subnets and records page * fixed incorrect table headers in subnet details page * fixed annonying extra whitespace in the top bar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,20 +44,24 @@ h2{
 }
 
 ol{
-    padding-top:20px;
+    clear:both;
     background-color:#ade;
     display:block;
 }
 
 li {
-    color:white;
-    text-align:center;
-    display:inline;
-    padding:5px 10px 0 10px;
-    margin-right:2px;
-    background-color: #69a;
+	color:white;
+	padding:5px 10px 0 10px;
+	margin-right:2px;
+}
+
+#nav li {
+	text-align:center;
+	display:inline;
+	background-color: #69a;
+
 }
 
 a{
-    text-decoration:none;
+	text-decoration:none;
 }
